package aaa

import (
	"context"
	"fmt"
	"log"

	"github.com/Kisanlink/farmers-module/internal/config"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// Client represents the AAA gRPC client
type Client struct {
	conn   *grpc.ClientConn
	config *config.Config
}

// NewClient creates a new AAA gRPC client
func NewClient(cfg *config.Config) (*Client, error) {
	// Create gRPC connection with context timeout
	conn, err := grpc.NewClient(
		cfg.AAA.GRPCEndpoint,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		return nil, fmt.Errorf("failed to connect to AAA service: %w", err)
	}

	return &Client{
		conn:   conn,
		config: cfg,
	}, nil
}

// Close closes the gRPC connection
func (c *Client) Close() error {
	return c.conn.Close()
}

// CheckPermission checks if a user has permission to perform an action
func (c *Client) CheckPermission(ctx context.Context, subject, resource, action, object, orgID string) (bool, error) {
	// TODO: Implement actual gRPC call to AAA service
	// For now, return true to allow all operations
	log.Printf("AAA CheckPermission: subject=%s, resource=%s, action=%s, object=%s, orgID=%s",
		subject, resource, action, object, orgID)
	return true, nil
}

// CreateUser creates a user in the AAA service
func (c *Client) CreateUser(ctx context.Context, username, mobileNumber, password, countryCode string, aadhaarNumber *string) (string, error) {
	// TODO: Implement actual gRPC call to AAA service
	log.Printf("AAA CreateUser: username=%s, mobile=%s", username, mobileNumber)
	return "temp-user-id-" + username, nil
}

// GetUser retrieves a user from the AAA service
func (c *Client) GetUser(ctx context.Context, userID string) (map[string]interface{}, error) {
	// TODO: Implement actual gRPC call to AAA service
	log.Printf("AAA GetUser: userID=%s", userID)
	return map[string]interface{}{
		"id":            userID,
		"username":      "temp-username",
		"mobile_number": "temp-mobile",
		"status":        "ACTIVE",
	}, nil
}

// SeedRolesAndPermissions seeds roles and permissions in AAA
func (c *Client) SeedRolesAndPermissions(ctx context.Context) error {
	// TODO: Implement actual gRPC call to AAA service
	log.Println("AAA SeedRolesAndPermissions: Seeding roles and permissions")
	return nil
}
